--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "ts-node src",
-    "dev": "nodemon src/index.ts",
+    "start": "ts-node -r dotenv/config src",
+    "dev": "nodemon -r dotenv/config src/index.ts",
     "lint": "eslint src/**/*.ts"
   },
   "keywords": [],
@@ -23,6 +23,7 @@
     "@types/passport-local": "^1.0.33",
     "@types/ramda": "^0.26.22",
     "@types/supertest": "^2.0.8",
+    "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
     "chalk": "^2.4.2",
