--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.4",
     "bcrypt": "^3.0.6",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.10.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
