--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "supertest": "^4.0.2",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "utility-types": "^3.8.0"
   },
   "dependencies": {
     "@hapi/joi": "^16.1.4",
