--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "no-console": "off",
     "function-paren-newline": "off",
     "no-param-reassign": "off",
-    "max-len": "off"
+    "max-len": "off",
+    "class-methods-use-this": "off"
   }
 }
