--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "function-paren-newline": "off",
     "no-param-reassign": "off",
     "max-len": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "no-useless-constructor": "off"
   }
 }
