--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "chalk": "^2.4.2",
     "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
     "mongodb-memory-server": "^5.2.3",
     "nodemon": "^1.19.2",
+    "prettier": "^2.7.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
